--- a/tests/PyzTest/Zed/TestifyBackendApi/codeception.dynamic.fixtures.yml
+++ b/tests/PyzTest/Zed/TestifyBackendApi/codeception.dynamic.fixtures.yml
@@ -55,6 +55,7 @@ suites:
                 - \SprykerTest\Zed\CompanyRole\Helper\CompanyRoleHelper
                 - \SprykerTest\Shared\MerchantRelationRequest\Helper\MerchantRelationRequestHelper
                 - \SprykerTest\Shared\Comment\Helper\CommentHelper
+                - \SprykerTest\Shared\Discount\Helper\DiscountDataHelper
                 - \SprykerTest\Zed\Twig\Helper\TwigHelper:
             config:
                 \SprykerTest\Shared\Testify\Helper\DataCleanupHelper:
