--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,7 @@ jobs:
 
         env:
             APPLICATION_ENV: ci.mysql
+            APPLICATION_STORE: DE
             SPRYKER_CURRENT_REGION: EU
             SPRYKER_DYNAMIC_STORE_MODE: true
             PROJECT: suite
