FRW-7619 Adjusted configuration file for Data Exchange API. (#8736)
FRW-7619 Adjusted configuration file for Data Exchange API.

--- a/src/Pyz/Zed/DynamicEntity/data/installer/configuration.json
+++ b/src/Pyz/Zed/DynamicEntity/data/installer/configuration.json
@@ -114,7 +114,7 @@
             },
             {
                 "name": "productAbstractStores",
-                "isEditable": false,
+                "isEditable": true,
                 "childDynamicEntityConfiguration": {
                     "tableAlias": "product-abstract-stores"
                 },
