Activate newrelic for dsfrw environment.

--- a/deploy.spryker-dsfrw.yml
+++ b/deploy.spryker-dsfrw.yml
@@ -59,6 +59,9 @@ image:
     node:
         version: 18
         npm: 9
+    php:
+        enabled-extensions:
+            - newrelic
 
 composer:
     mode: ''
