--- a/src/Pyz/Zed/DynamicEntity/data/installer/configuration.json
+++ b/src/Pyz/Zed/DynamicEntity/data/installer/configuration.json
@@ -5,6 +5,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_abstract",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_abstract",
@@ -250,6 +251,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product",
@@ -431,6 +433,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_abstract_attributes",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_abstract_attributes",
@@ -513,6 +516,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_category",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_category",
@@ -620,6 +624,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_category_template",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_category_template",
@@ -669,6 +674,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_category",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_category",
@@ -726,6 +732,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_url",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_url",
@@ -771,6 +778,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_locale",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_locale",
@@ -989,6 +997,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_attributes",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_attributes",
@@ -1047,6 +1056,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_bundle",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_bundle",
@@ -1089,6 +1099,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_abstract_store",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_abstract_store",
@@ -1123,6 +1134,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_store",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_store",
@@ -1284,6 +1296,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_attribute_key",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_attribute_key",
@@ -1359,6 +1372,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_group",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_group",
@@ -1400,6 +1414,7 @@
         "isActive": true,
         "definition": {
             "identifier": "fk_product_abstract",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "fk_product_abstract",
@@ -1434,6 +1449,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_image",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_image",
@@ -1483,6 +1499,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_image_set",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_image_set",
@@ -1548,6 +1565,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_image_set_to_product_image",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_image_set_to_product_image",
@@ -1590,6 +1608,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_management_attribute",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_management_attribute",
@@ -1647,6 +1666,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_management_attribute_value",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_management_attribute_value",
@@ -1696,6 +1716,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_glossary_key",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_glossary_key",
@@ -1745,6 +1766,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_glossary_translation",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_glossary_translation",
@@ -1795,6 +1817,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_management_attribute_value_translation",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_management_attribute_value_translation",
@@ -1837,6 +1860,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_option_group",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_option_group",
@@ -1915,6 +1939,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_option_value",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_option_value",
@@ -1980,6 +2005,7 @@
         "isActive": true,
         "definition": {
             "identifier": "fk_product_abstract",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "fk_product_abstract",
@@ -2006,6 +2032,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_option_value_price",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_option_value_price",
@@ -2064,6 +2091,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_currency",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_currency",
@@ -2147,6 +2175,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_price_type",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_price_type",
@@ -2181,6 +2210,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_price_product",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_price_product",
@@ -2246,6 +2276,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_company",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_company",
@@ -2319,6 +2350,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_company_type",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_company_type",
@@ -2360,6 +2392,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_price_product_store",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_price_product_store",
@@ -2433,6 +2466,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_price_product_default",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_price_product_default",
@@ -2459,6 +2493,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_review",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_review",
@@ -2541,6 +2576,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_search_attribute",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_search_attribute",
@@ -2591,6 +2627,7 @@
         "isActive": true,
         "definition": {
             "identifier": "fk_product_attribute_key",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "fk_product_attribute_key",
@@ -2625,6 +2662,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_set",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_set",
@@ -2721,6 +2759,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_abstract_set",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_abstract_set",
@@ -2763,6 +2802,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_set_data",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_set_data",
@@ -2837,6 +2877,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_stock",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_stock",
@@ -2894,6 +2935,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_stock_product",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_stock_product",
@@ -2944,6 +2986,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_availability_abstract",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_availability_abstract",
@@ -3001,6 +3044,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_availability",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_availability",
@@ -3059,6 +3103,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_tax_set",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_tax_set",
@@ -3134,6 +3179,7 @@
         "isActive": true,
         "definition": {
             "identifier": "fk_tax_rate",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "fk_tax_rate",
@@ -3160,6 +3206,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_tax_rate",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_tax_rate",
@@ -3202,6 +3249,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_country",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_country",
@@ -3275,6 +3323,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_search",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_search",
@@ -3317,6 +3366,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_category_node",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_category_node",
@@ -3390,6 +3440,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_category_store",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_category_store",
@@ -3424,6 +3475,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_category_attribute",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_category_attribute",
@@ -3498,6 +3550,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_relation_type",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_relation_type",
@@ -3539,6 +3592,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_relation",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_relation",
@@ -3633,6 +3687,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_relation_product_abstract",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_relation_product_abstract",
@@ -3675,6 +3730,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_relation_store",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_relation_store",
@@ -3709,6 +3765,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_label",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_label",
@@ -3840,6 +3897,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_label_localized_attributes",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_label_localized_attributes",
@@ -3882,6 +3940,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_label_store",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_label_store",
@@ -3916,6 +3975,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_product_label_product_abstract",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_product_label_product_abstract",
@@ -3950,6 +4010,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_sales_order",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_sales_order",
@@ -4072,6 +4133,7 @@
         "isActive": true,
         "definition": {
             "identifier": "id_locale_store",
+            "isDeletable": false,
             "fields": [
                 {
                     "fieldName": "id_locale_store",
@@ -4095,6 +4157,76 @@
                     "isCreatable": true,
                     "isEditable": true,
                     "type": "integer",
+                    "validation": { "isRequired": true }
+                }
+            ]
+        }
+    },
+    {
+        "tableName": "spy_currency_store",
+        "tableAlias": "currency-stores",
+        "isActive": true,
+        "definition": {
+            "identifier": "id_currency_store",
+            "isDeletable": false,
+            "fields": [
+                {
+                    "fieldName": "id_currency_store",
+                    "fieldVisibleName": "id_currency_store",
+                    "type": "integer",
+                    "isCreatable": false,
+                    "isEditable": false,
+                    "validation": { "isRequired": false }
+                },
+                {
+                    "fieldName": "fk_currency",
+                    "fieldVisibleName": "fk_currency",
+                    "type": "integer",
+                    "isCreatable": true,
+                    "isEditable": true,
+                    "validation": { "isRequired": true }
+                },
+                {
+                    "fieldName": "fk_store",
+                    "fieldVisibleName": "fk_store",
+                    "type": "integer",
+                    "isCreatable": true,
+                    "isEditable": true,
+                    "validation": { "isRequired": true }
+                }
+            ]
+        }
+    },
+    {
+        "tableName": "pyz_example_state_machine_item",
+        "tableAlias": "example-state-machine-items",
+        "isActive": true,
+        "definition": {
+            "identifier": "id_example_state_machine_item",
+            "isDeletable": true,
+            "fields": [
+                {
+                    "fieldName": "id_example_state_machine_item",
+                    "fieldVisibleName": "id_example_state_machine_item",
+                    "type": "integer",
+                    "isCreatable": true,
+                    "isEditable": false,
+                    "validation": { "isRequired": true }
+                },
+                {
+                    "fieldName": "fk_state_machine_item_state",
+                    "fieldVisibleName": "fk_state_machine_item_state",
+                    "type": "integer",
+                    "isCreatable": true,
+                    "isEditable": true,
+                    "validation": { "isRequired": true }
+                },
+                {
+                    "fieldName": "name",
+                    "fieldVisibleName": "name",
+                    "type": "string",
+                    "isCreatable": true,
+                    "isEditable": true,
                     "validation": { "isRequired": true }
                 }
             ]
