--- a/data/import/local/full_AT.yml
+++ b/data/import/local/full_AT.yml
@@ -15,6 +15,8 @@ actions:
       source: data/import/common/AT/locale_store.csv
     - data_entity: default-locale-store
       source: data/import/common/AT/default_locale_store.csv
+    - data_entity: context-store
+      source: data/import/common/AT/store_context.csv
     - data_entity: order-source
       source: data/import/common/common/order_source.csv
     - data_entity: customer
