--- a/data/import/production/full_EU.yml
+++ b/data/import/production/full_EU.yml
@@ -23,6 +23,10 @@ actions:
       source: data/import/common/DE/default_locale_store.csv
     - data_entity: default-locale-store
       source: data/import/common/AT/default_locale_store.csv
+    - data_entity: context-store
+      source: data/import/common/DE/store_context.csv
+    - data_entity: context-store
+      source: data/import/common/AT/store_context.csv
     - data_entity: order-source
       source: data/import/common/common/order_source.csv
     - data_entity: customer
