--- a/data/import/production/full_US.yml
+++ b/data/import/production/full_US.yml
@@ -15,6 +15,8 @@ actions:
       source: data/import/common/US/locale_store.csv
     - data_entity: default-locale-store
       source: data/import/common/US/default_locale_store.csv
+    - data_entity: context-store
+      source: data/import/common/US/store_context.csv
     - data_entity: order-source
       source: data/import/common/common/order_source.csv
     - data_entity: customer
