--- a/package.json
+++ b/package.json
@@ -117,5 +117,8 @@
         "typescript": "~5.4.2",
         "webpack": "~5.88.2",
         "webpack-merge": "~5.10.0"
+    },
+    "overrides": {
+        "ws": "^8.17.1"
     }
 }
