--- a/deploy.valerii-prod.yml
+++ b/deploy.valerii-prod.yml
@@ -39,7 +39,7 @@ tag: '1.0'
 
 environment: docker.dev
 image:
-    tag: spryker/php:8.1
+    tag: spryker/php:latest
     environment:
         SPRYKER_DEFAULT_STORE: "DE"
         SPRYKER_ACTIVE_STORES: "DE,AT"
@@ -49,11 +49,10 @@ image:
         SPRYKER_HOOK_DESTRUCTIVE_INSTALL: "vendor/bin/install -r destructive --no-ansi -vvv"
         AWS_REGION: 'eu-central-1'
     node:
-        version: 16
-        npm: 8
+        version: 18
+        npm: 9
     php:
         enabled-extensions:
-            - blackfire
             - newrelic
 composer:
     mode: --no-dev
@@ -73,7 +72,7 @@ regions:
             mail:
                 sender:
                     name: Spryker No-Reply
-                    email: no-reply@valerii-terraform.cloud.spryker.toys
+                    email: no-reply@valerii-prod.cloud.spryker.toys
             database:
                 database: valerii_prod
                 username: spryker
@@ -107,47 +106,47 @@ groups:
             Yves:
                 application: yves
                 endpoints:
-                    www.de.valerii-terraform.cloud.spryker.toys:
+                    www.de.valerii-prod.cloud.spryker.toys:
                         store: DE
                         <<: *frontend-auth
-                    www.at.valerii-terraform.cloud.spryker.toys:
+                    www.at.valerii-prod.cloud.spryker.toys:
                         store: AT
                         <<: *frontend-auth
             boffice:
                 application: backoffice
                 endpoints:
-                    backoffice.de.valerii-terraform.cloud.spryker.toys:
+                    backoffice.de.valerii-prod.cloud.spryker.toys:
                         store: DE
                         primal: true
-                    backoffice.at.valerii-terraform.cloud.spryker.toys:
+                    backoffice.at.valerii-prod.cloud.spryker.toys:
                         store: AT
             backgw:
                 application: backend-gateway
                 endpoints:
-                    backend-gateway.de.valerii-terraform.cloud.spryker.toys:
+                    backend-gateway.de.valerii-prod.cloud.spryker.toys:
                         store: DE
-                    backend-gateway.at.valerii-terraform.cloud.spryker.toys:
+                    backend-gateway.at.valerii-prod.cloud.spryker.toys:
                         store: AT
             backapi:
                 application: zed
                 endpoints:
-                    backend-api.de.valerii-terraform.cloud.spryker.toys:
+                    backend-api.de.valerii-prod.cloud.spryker.toys:
                         store: DE
                         entry-point: BackendApi
-                    backend-api.at.valerii-terraform.cloud.spryker.toys:
+                    backend-api.at.valerii-prod.cloud.spryker.toys:
                         store: AT
                         entry-point: BackendApi
             Glue:
                 application: glue
                 endpoints:
-                    glue.de.valerii-terraform.cloud.spryker.toys:
+                    glue.de.valerii-prod.cloud.spryker.toys:
                         store: DE
-                    glue.at.valerii-terraform.cloud.spryker.toys:
+                    glue.at.valerii-prod.cloud.spryker.toys:
                         store: AT
 services:
     database:
         engine: mysql
-        version: mariadb-10.4
+        version: mariadb-10.11
         root:
             username: "root"
             password: "secret"
@@ -161,7 +160,7 @@ services:
             username: "spryker"
             password: "secret"
         endpoints:
-            queue.valerii-terraform.cloud.spryker.toys:
+            queue.valerii-prod.cloud.spryker.toys:
             localhost:5672:
                 protocol: tcp
     session:
@@ -181,11 +180,11 @@ services:
         engine: jenkins
         version: '2.324'
         endpoints:
-            jenkins2.valerii-terraform.cloud.spryker.toys:
+            jenkins2.valerii-prod.cloud.spryker.toys:
     mail_catcher:
         engine: mailhog
         endpoints:
-            mail.valerii-terraform.cloud.spryker.toys:
+            mail.valerii-prod.cloud.spryker.toys:
 docker:
     ssl:
         enabled: true
