CC-33918 Merchant Commission stable release. (#8897)
CC-33918 Stabilisation Release

--- a/tests/PyzTest/Zed/TestifyBackendApi/codeception.dynamic.fixtures.yml
+++ b/tests/PyzTest/Zed/TestifyBackendApi/codeception.dynamic.fixtures.yml
@@ -56,6 +56,9 @@ suites:
                 - \SprykerTest\Shared\MerchantRelationRequest\Helper\MerchantRelationRequestHelper
                 - \SprykerTest\Shared\Comment\Helper\CommentHelper
                 - \SprykerTest\Shared\Discount\Helper\DiscountDataHelper
+                - \SprykerTest\Zed\Category\Helper\CategoryDataHelper
+                - \SprykerTest\Zed\ProductCategory\Helper\ProductCategoryDataHelper
+                - \SprykerTest\Shared\MerchantCommission\Helper\MerchantCommissionHelper
                 - \SprykerTest\Zed\Twig\Helper\TwigHelper:
             config:
                 \SprykerTest\Shared\Testify\Helper\DataCleanupHelper:
