SUPESC-866 Added psr/log version ^3.0.0 support.  (#8919)
SUPESC-866 Added psr/log version ^3.0.0 support.

--- a/composer.json
+++ b/composer.json
@@ -63,7 +63,7 @@
         "propel/propel": "2.0.0-beta3",
         "psr/container": "^1.0.0",
         "psr/http-message": "^1.0.1",
-        "psr/log": "^1.0.1",
+        "psr/log": "^1.0.1 || ^2.0.0 || ^3.0.0",
         "ramsey/uuid": "^4.0.1",
         "riskio/oauth2-auth0": "^2.4.0",
         "ruflin/elastica": "^6.2.0 || ^7.0.0",
