ACP-2626 Stripe marketplace payment flow marketplace oms workflow transfers to merchants (#8894)
ACP-2626 Stripe Marketplace Payment Flow- Marketplace OMS Workflow & Transfers to Merchants

--- a/tsconfig.mp.json
+++ b/tsconfig.mp.json
@@ -16,6 +16,9 @@
                 "vendor/spryker/spryker/Bundles/DashboardMerchantPortalGui/mp.public-api.ts"
             ],
             "@mp/dummy-merchant-portal-gui": ["vendor/spryker/spryker/Bundles/DummyMerchantPortalGui/mp.public-api.ts"],
+            "@mp/merchant-app-merchant-portal-gui": [
+                "vendor/spryker/spryker/Bundles/MerchantAppMerchantPortalGui/mp.public-api.ts"
+            ],
             "@mp/merchant-profile-merchant-portal-gui": [
                 "vendor/spryker/spryker/Bundles/MerchantProfileMerchantPortalGui/mp.public-api.ts"
             ],
