--- a/tsconfig.mp.json
+++ b/tsconfig.mp.json
@@ -12,6 +12,9 @@
             "@mp/comment-merchant-portal-gui": ["vendor/spryker/comment-merchant-portal-gui/mp.public-api.ts"],
             "@mp/dashboard-merchant-portal-gui": ["vendor/spryker/dashboard-merchant-portal-gui/mp.public-api.ts"],
             "@mp/dummy-merchant-portal-gui": ["vendor/spryker/dummy-merchant-portal-gui/mp.public-api.ts"],
+            "@mp/merchant-app-merchant-portal-gui": [
+                "vendor/spryker/merchant-app-merchant-portal-gui/mp.public-api.ts"
+            ],
             "@mp/merchant-profile-merchant-portal-gui": [
                 "vendor/spryker/merchant-profile-merchant-portal-gui/mp.public-api.ts"
             ],
