--- a/.gitignore
+++ b/.gitignore
@@ -100,4 +100,11 @@ c3.php
 
 .nx/cache
 
+# ACP
+/app-store-suite
+/registry-service
+public/Acp/*
+!public/Acp/*/index.php
+
+# LocalCI
 .local-ci.modules
