--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "docker"]
 	path = docker
 	url = git@github.com:spryker/docker-sdk.git
+[submodule "acp-toolbox"]
+	path = acp-toolbox
+	url = git@github.com:spryker-projects/acp-local-toolbox.git
