--- a/buddy.yml
+++ b/buddy.yml
@@ -21,6 +21,8 @@
             - '.ci/snippet/RUN snyk monitor --all-projects --org=c408eea4-f0a4-4d7a-846d-5457aefa0cac --exclude=project.json'
             - '.ci/snippet/RUN snyk test --all-projects --org=c408eea4-f0a4-4d7a-846d-5457aefa0cac --severity-threshold=high --exclude=project.json'
             - '.ci/snippet/FINISH'
+        setup_commands:
+            - 'apt-get update && apt-get install -y golang-go'
         shell: 'BASH'
 
 - pipeline: 'Standard Validation'
