--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,9 @@
         "spryker/checksum-generator": "dev-master",
         "spryker-eco/loggly": "dev-master",
         "spryker-eco/new-relic": "dev-master",
-        "spryker-eco/payone": "dev-master",
         "spryker/decimal-object": "^1.0.0",
         "spryker/composer-merge-plugin": "dev-master",
+        "spryker/tax-app-vertex": "dev-master",
         "php": ">=8.1",
         "ext-bcmath": "*",
         "ext-curl": "*",
