--- a/tests/PyzTest/Zed/MessageBroker/codeception.yml
+++ b/tests/PyzTest/Zed/MessageBroker/codeception.yml
@@ -31,6 +31,7 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
                 - \SprykerTest\Service\Container\Helper\ContainerHelper
                 - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
+                - \PyzTest\Zed\MessageBroker\Helper\MessageBrokerHelper
 
     AssetCommunication:
         path: MessageHandlers/Asset/Communication
@@ -54,6 +55,7 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
                 - \SprykerTest\Service\Container\Helper\ContainerHelper
                 - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
+                - \PyzTest\Zed\MessageBroker\Helper\MessageBrokerHelper
 
     PaymentPresentation:
         path: MessageHandlers/Payment/Presentation
@@ -81,6 +83,7 @@ suites:
                 - \SprykerTest\Shared\Currency\Helper\CurrencyDataHelper
                 - \SprykerTest\Zed\Sales\Helper\BusinessHelper
                 - \SprykerTest\Shared\Store\Helper\StoreDataHelper
+                - \PyzTest\Zed\MessageBroker\Helper\MessageBrokerHelper
 
     PaymentMethodPresentation:
         path: MessageHandlers/PaymentMethod/Presentation
@@ -134,6 +137,7 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
                 - \SprykerTest\Service\Container\Helper\ContainerHelper
                 - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
+                - \PyzTest\Zed\MessageBroker\Helper\MessageBrokerHelper
 
     ProductReviewCommunication:
         path: MessageHandlers/ProductReview/Communication
@@ -159,6 +163,7 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
                 - \SprykerTest\Service\Container\Helper\ContainerHelper
                 - \SprykerTest\Shared\Store\Helper\StoreDependencyHelper
+                - \PyzTest\Zed\MessageBroker\Helper\MessageBrokerHelper
 
     SearchHttpCommunication:
         path: MessageHandlers/SearchHttp/Communication
@@ -177,6 +182,7 @@ suites:
                 - \SprykerTest\Zed\MessageBroker\Helper\MessageBrokerHelper
                 - \SprykerTest\Shared\Store\Helper\StoreDataHelper
                 - \SprykerTest\Shared\Propel\Helper\TransactionHelper
+                - \PyzTest\Zed\MessageBroker\Helper\MessageBrokerHelper
 
     TaxAppCommunication:
         path: MessageHandlers/TaxApp/Communication
@@ -199,3 +205,4 @@ suites:
                 - \SprykerTest\Shared\Testify\Helper\DependencyHelper
                 - \SprykerTest\Service\Container\Helper\ContainerHelper
                 - \SprykerTest\Shared\Propel\Helper\TransactionHelper
+                - \PyzTest\Zed\MessageBroker\Helper\MessageBrokerHelper
