ACP-2812: Fixed TaxApp Vertex package version

--- a/composer.json
+++ b/composer.json
@@ -1187,7 +1187,7 @@
         "spryker/tax": "^5.9.0",
         "spryker/tax-app": "^0.3.0",
         "spryker/tax-app-extension": "^1.0.0",
-        "spryker/tax-app-vertex": "dev-master",
+        "spryker/tax-app-vertex": "^0.1.0",
         "spryker/tax-merchant-portal-gui": "^1.0.0",
         "spryker/tax-product-connector": "^4.4.0",
         "spryker/tax-product-connector-extension": "^1.0.0",
