--- a/buddy.yml
+++ b/buddy.yml
@@ -19,7 +19,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE npm install --location=global snyk'
             - '.ci/snippet/RUN snyk monitor --all-projects --org=c408eea4-f0a4-4d7a-846d-5457aefa0cac --exclude=project.json'
-            - '.ci/snippet/RUN snyk test --all-projects --org=c408eea4-f0a4-4d7a-846d-5457aefa0cac --severity-threshold=high --exclude=project.json'
+            - '.ci/snippet/RUN snyk test --fail-on=all --all-projects --org=c408eea4-f0a4-4d7a-846d-5457aefa0cac --severity-threshold=high --exclude=project.json'
             - '.ci/snippet/FINISH'
         setup_commands:
             - 'apt-get update && apt-get install -y golang-go'
